--- a/MinifabNetwork/spec.yaml
+++ b/MinifabNetwork/spec.yaml
@@ -1,18 +1,15 @@
 fabric:
   cas:
-    - "ca1.manufacturer.auto.com"
-    - "ca1.dealer.auto.com"
-    - "ca1.mvd.auto.com"
+    - "ca1.example.reg.com"
+    - "ca1.example2.reg.com"
+
   peers:
-    - "peer1.manufacturer.auto.com"
+    - "peer1.example.reg.com"
     # - "peer2.org0.example.com"
-    - "peer1.dealer.auto.com"
+    - "peer1.example2.reg.com"
     # - "peer2.org1.example.com"
-    - "peer1.mvd.auto.com"
   orderers:
-    - "orderer1.auto.com"
-    - "orderer2.auto.com"
-    - "orderer3.auto.com"
+    - "orderer1.reg.com"
   settings:
     ca:
       FABRIC_LOGGING_SPEC: DEBUG
